--- a/thesisTemplate.bib
+++ b/thesisTemplate.bib
@@ -9,6 +9,40 @@
   publisher={ACM}
 }
 
+@inproceedings{10.1145/2749469.2750385,
+author = {Ahn, Junwhan and Yoo, Sungjoo and Mutlu, Onur and Choi, Kiyoung},
+title = {PIM-Enabled Instructions: A Low-Overhead, Locality-Aware Processing-in-Memory Architecture},
+year = {2015},
+isbn = {9781450334020},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2749469.2750385},
+doi = {10.1145/2749469.2750385},
+booktitle = {Proceedings of the 42nd Annual International Symposium on Computer Architecture},
+pages = {336–348},
+numpages = {13},
+location = {Portland, Oregon},
+series = {ISCA '15}
+}
+
+@article{PEI_ISCA,
+author = {Ahn, Junwhan and Yoo, Sungjoo and Mutlu, Onur and Choi, Kiyoung},
+title = {PIM-Enabled Instructions: A Low-Overhead, Locality-Aware Processing-in-Memory Architecture},
+year = {2015},
+issue_date = {June 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {43},
+number = {3S},
+issn = {0163-5964},
+url = {https://doi.org/10.1145/2872887.2750385},
+doi = {10.1145/2872887.2750385},
+journal = {SIGARCH Comput. Archit. News},
+month = {jun},
+pages = {336–348},
+numpages = {13}
+}
+
 @article{hill2008amdahl,
   title={Amdahl's law in the multicore era},
   author={Hill, Mark D and Marty, Michael R},
