--- a/thesisTemplate.bib
+++ b/thesisTemplate.bib
@@ -8,6 +8,73 @@
   year={2011},
   publisher={ACM}
 }
+@unknown{3dmem,
+author = {Ghose, Saugata and Boroumand, Amirali and Kim, Jeremie and Gómez-Luna, Juan and Mutlu, Onur},
+year = {2019},
+month = {07},
+pages = {},
+title = {A Workload and Programming Ease Driven Perspective of Processing-in-Memory}
+}
+@INPROCEEDINGS{fafnir12,
+  author={Asgari, Bahar and Hadidi, Ramyad and Cao, Jiashen and Shim, Da Eun and Lim, Sung-Kyu and Kim, Hyesoon},
+  booktitle={2021 IEEE International Symposium on High-Performance Computer Architecture (HPCA)}, 
+  title={FAFNIR: Accelerating Sparse Gathering by Using Efficient Near-Memory Intelligent Reduction}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={908-920},
+  doi={10.1109/HPCA51647.2021.00080}}
+
+  @INPROCEEDINGS{tom31,
+  author={Hsieh, Kevin and Ebrahim, Eiman and Kim, Gwangsun and Chatterjee, Niladrish and O'Connor, Mike and Vijaykumar, Nandita and Mutlu, Onur and Keckler, Stephen W.},
+  booktitle={2016 ACM/IEEE 43rd Annual International Symposium on Computer Architecture (ISCA)}, 
+  title={Transparent Offloading and Mapping (TOM): Enabling Programmer-Transparent Near-Data Processing in GPU Systems}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={204-216},
+  doi={10.1109/ISCA.2016.27}}
+
+@INPROCEEDINGS{pointerchasing32,
+  author={Hsieh, Kevin and Khan, Samira and Vijaykumar, Nandita and Chang, Kevin K. and Boroumand, Amirali and Ghose, Saugata and Mutlu, Onur},
+  booktitle={2016 IEEE 34th International Conference on Computer Design (ICCD)}, 
+  title={Accelerating pointer chasing in 3D-stacked memory: Challenges, mechanisms, evaluation}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={25-32},
+  doi={10.1109/ICCD.2016.7753257}}
+@INPROCEEDINGS{energyefficient40,
+  author={Kim, Byoung-Hak and Lim, Eui Cheol and Rhee, Chae Eun},
+  booktitle={2019 IEEE International Symposium on Circuits and Systems (ISCAS)}, 
+  title={Exploration of a PIM Design Configuration for Energy-Efficient Task Offloading},
+  year={2019},
+  volume={},
+  number={},
+  pages={1-4},
+  doi={10.1109/ISCAS.2019.8702339}}
+
+
+@INPROCEEDINGS{coolpim47,
+  author={Nai, Lifeng and Hadidi, Ramyad and Xiao, He and Kim, Hyojong and Sim, Jaewoong and Kim, Hyesoon},
+  booktitle={2018 IEEE International Parallel and Distributed Processing Symposium (IPDPS)}, 
+  title={CoolPIM: Thermal-Aware Source Throttling for Efficient PIM Instruction Offloading}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={680-689},
+  doi={10.1109/IPDPS.2018.00077}}
+
+
+@ARTICLE{inmemmap51,
+  author={Pugsley, Seth H. and Jestes, Jeffrey and Balasubramonian, Rajeev and Srinivasan, Vijayalakshmi and Buyuktosunoglu, Alper and Davis, Al and Li, Feifei},
+  journal={IEEE Micro}, 
+  title={Comparing Implementations of Near-Data Computing with In-Memory MapReduce Workloads}, 
+  year={2014},
+  volume={34},
+  number={4},
+  pages={44-52},
+  doi={10.1109/MM.2014.54}}
 
 @inproceedings{10.1145/2749469.2750385,
 author = {Ahn, Junwhan and Yoo, Sungjoo and Mutlu, Onur and Choi, Kiyoung},
@@ -25,6 +92,26 @@ location = {Portland, Oregon},
 series = {ISCA '15}
 }
 
+@INPROCEEDINGS{tesseract,
+  author={Ahn, Junwhan and Hong, Sungpack and Yoo, Sungjoo and Mutlu, Onur and Choi, Kiyoung},
+  booktitle={2015 ACM/IEEE 42nd Annual International Symposium on Computer Architecture (ISCA)}, 
+  title={A scalable processing-in-memory accelerator for parallel graph processing}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={105-117},
+  doi={10.1145/2749469.2750386}}
+
+
+@INPROCEEDINGS{mockingjay,
+  author={Shah, Ishan and Jain, Akanksha and Lin, Calvin},
+  booktitle={2022 IEEE International Symposium on High-Performance Computer Architecture (HPCA)}, 
+  title={Effective Mimicry of Belady’s MIN Policy}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={558-572},
+  doi={10.1109/HPCA53966.2022.00048}}
 @article{PEI_ISCA,
 author = {Ahn, Junwhan and Yoo, Sungjoo and Mutlu, Onur and Choi, Kiyoung},
 title = {PIM-Enabled Instructions: A Low-Overhead, Locality-Aware Processing-in-Memory Architecture},
